{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 454,
  "lineage": "99b5d0f9-08dc-e496-3261-15359e7fc5d5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec201",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0bdd88bd06d16ba03",
            "arn": "arn:aws:ec2:us-east-1:420228061920:instance/i-0445799ded4ef19a6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "armageddon-class-vii-instance-profile01",
            "id": "i-0445799ded4ef19a6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0d872431040d0d7ee"
              }
            ],
            "primary_network_interface_id": "eni-0d872431040d0d7ee",
            "private_dns": "ip-172-17-1-13.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.17.1.13",
            "public_dns": "ec2-44-200-215-238.compute-1.amazonaws.com",
            "public_ip": "44.200.215.238",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0fb1d8472ad471ddf",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ee6359ed0815f97f",
            "tags": {
              "Name": "armageddon-class-vii-ec201"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-ec201"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-048507bb60489a073"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "i-0445799ded4ef19a6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.instance_profile01",
            "aws_iam_role.ec2_role01",
            "aws_security_group.ec2_sg01",
            "aws_subnet.public_subnets",
            "aws_vpc.lab1_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:420228061920:internet-gateway/igw-09bdca52909b1f52b",
            "id": "igw-09bdca52909b1f52b",
            "owner_id": "420228061920",
            "region": "us-east-1",
            "tags": {
              "Name": "armageddon-class-vii-igw01"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-igw01"
            },
            "vpc_id": "vpc-06a7fbe9a6ec9a61a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.lab1_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09bdca52909b1f52b",
            "id": "r-rtb-00fb76b8964fccfbd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-00fb76b8964fccfbd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-00fb76b8964fccfbd"
          },
          "dependencies": [
            "aws_internet_gateway.igw01",
            "aws_route_table.lab1_public_rt01",
            "aws_vpc.lab1_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "lab1_public_rt01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:420228061920:route-table/rtb-00fb76b8964fccfbd",
            "id": "rtb-00fb76b8964fccfbd",
            "owner_id": "420228061920",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "armageddon-class-vii-public-rt01"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-public-rt01"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a7fbe9a6ec9a61a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "rtb-00fb76b8964fccfbd",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.lab1_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:420228061920:route-table/rtb-0fb11859b06f8eab5",
            "id": "rtb-0fb11859b06f8eab5",
            "owner_id": "420228061920",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "armageddon-class-vii-private-rt01"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-private-rt01"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a7fbe9a6ec9a61a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "rtb-0fb11859b06f8eab5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.lab1_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "lab1_public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0edc48225be8846c5",
            "region": "us-east-1",
            "route_table_id": "rtb-00fb76b8964fccfbd",
            "subnet_id": "subnet-0ee6359ed0815f97f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.lab1_public_rt01",
            "aws_subnet.public_subnets",
            "aws_vpc.lab1_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc3f741abe57c40a",
            "region": "us-east-1",
            "route_table_id": "rtb-00fb76b8964fccfbd",
            "subnet_id": "subnet-0b0611dd60b745283"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.lab1_public_rt01",
            "aws_subnet.public_subnets",
            "aws_vpc.lab1_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd0dec69916925af",
            "region": "us-east-1",
            "route_table_id": "rtb-0fb11859b06f8eab5",
            "subnet_id": "subnet-0af5bce4622d3b999"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_rt01",
            "aws_subnet.private_subnets",
            "aws_vpc.lab1_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb1fd5c38055d0b4",
            "region": "us-east-1",
            "route_table_id": "rtb-0fb11859b06f8eab5",
            "subnet_id": "subnet-0299b66da12df5e72"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_rt01",
            "aws_subnet.private_subnets",
            "aws_vpc.lab1_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:420228061920:security-group/sg-048507bb60489a073",
            "description": "EC2 app security group",
            "egress": [],
            "id": "sg-048507bb60489a073",
            "ingress": [],
            "name": "armageddon-class-vii-ec2-sg01",
            "name_prefix": "",
            "owner_id": "420228061920",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "armageddon-class-vii-ec2-sg01"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-ec2-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a7fbe9a6ec9a61a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "sg-048507bb60489a073",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.lab1_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:420228061920:security-group/sg-09a3825985c7aed5e",
            "description": "RDS security group",
            "egress": [],
            "id": "sg-09a3825985c7aed5e",
            "ingress": [],
            "name": "armageddon-class-vii-rds-sg01",
            "name_prefix": "",
            "owner_id": "420228061920",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "armageddon-class-vii-rds-sg01"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-rds-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a7fbe9a6ec9a61a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "sg-09a3825985c7aed5e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.lab1_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:420228061920:subnet/subnet-0af5bce4622d3b999",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.17.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af5bce4622d3b999",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "420228061920",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "armageddon-class-vii-private-subnet01"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-private-subnet01"
            },
            "vpc_id": "vpc-06a7fbe9a6ec9a61a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "subnet-0af5bce4622d3b999",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.lab1_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:420228061920:subnet/subnet-0299b66da12df5e72",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.17.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0299b66da12df5e72",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "420228061920",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "armageddon-class-vii-private-subnet01"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-private-subnet01"
            },
            "vpc_id": "vpc-06a7fbe9a6ec9a61a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "subnet-0299b66da12df5e72",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.lab1_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:420228061920:subnet/subnet-0ee6359ed0815f97f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.17.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ee6359ed0815f97f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "420228061920",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "armageddon-class-vii-public-subnet01"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-public-subnet01"
            },
            "vpc_id": "vpc-06a7fbe9a6ec9a61a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "subnet-0ee6359ed0815f97f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.lab1_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:420228061920:subnet/subnet-0b0611dd60b745283",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.17.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b0611dd60b745283",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "420228061920",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "armageddon-class-vii-public-subnet01"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-public-subnet01"
            },
            "vpc_id": "vpc-06a7fbe9a6ec9a61a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "subnet-0b0611dd60b745283",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.lab1_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lab1_vpc01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:420228061920:vpc/vpc-06a7fbe9a6ec9a61a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.17.0.0/16",
            "default_network_acl_id": "acl-0094a7407be171df0",
            "default_route_table_id": "rtb-0192c43a4e5c7bd8e",
            "default_security_group_id": "sg-0acd79d36b9ceb98c",
            "dhcp_options_id": "dopt-07277096d4d0f35f5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06a7fbe9a6ec9a61a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0192c43a4e5c7bd8e",
            "owner_id": "420228061920",
            "region": "us-east-1",
            "tags": {
              "Name": "armageddon-class-vii-vpc01"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-vpc01"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "vpc-06a7fbe9a6ec9a61a",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:420228061920:security-group-rule/sgr-04024f566e7babec5",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-04024f566e7babec5",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-048507bb60489a073",
            "security_group_rule_id": "sgr-04024f566e7babec5",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "sgr-04024f566e7babec5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ec2_sg01",
            "aws_vpc.lab1_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:420228061920:security-group-rule/sgr-0a9f614e3245d8fd7",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0a9f614e3245d8fd7",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-048507bb60489a073",
            "security_group_rule_id": "sgr-0a9f614e3245d8fd7",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "sgr-0a9f614e3245d8fd7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ec2_sg01",
            "aws_vpc.lab1_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_mysql_from_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:420228061920:security-group-rule/sgr-05c76053f2c2b7935",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-05c76053f2c2b7935",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-048507bb60489a073",
            "region": "us-east-1",
            "security_group_id": "sg-09a3825985c7aed5e",
            "security_group_rule_id": "sgr-05c76053f2c2b7935",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "sgr-05c76053f2c2b7935",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ec2_sg01",
            "aws_security_group.rds_sg01",
            "aws_vpc.lab1_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:420228061920:security-group-rule/sgr-01d95858d2f9172a2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-01d95858d2f9172a2",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-048507bb60489a073",
            "security_group_rule_id": "sgr-01d95858d2f9172a2",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "sgr-01d95858d2f9172a2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ec2_sg01",
            "aws_vpc.lab1_vpc01"
          ]
        }
      ]
    }
  ]
}